testdata/004-invalid-tail.stderr
error: expected: "KTHXBYE" (line=3 col=8)
  KTHXBYE!!!
         ^
